# pre-commit-copyright-year

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  hooks.yaml  setup.cfg
pre_commit_hooks/: copyright_year.py
